--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "$components/*": ["src/components/*"],
+      "$assets/*": ["src/assets/*"],
+      "$pages/*": ["src/pages/*"],
+      "$helpers/*": ["src/helpers/*"]
+    }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
