--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "$components/*": ["src/components/*"],
       "$assets/*": ["src/assets/*"],
       "$pages/*": ["src/pages/*"],
-      "$helpers/*": ["src/helpers/*"]
+      "$helpers/*": ["src/helpers/*"],
+      "$styles/*": ["src/styles/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
