--- a/package.json
+++ b/package.json
@@ -24,19 +24,26 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@sveltejs/vite-plugin-svelte": "^2.1.1",
     "@tsconfig/svelte": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-svelte": "^2.27.1",
     "jsdom": "^21.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.53.0",
     "storybook": "^7.0.7",
     "svelte": "^3.57.0",
     "svelte-check": "^2.10.3",
+    "svelte-eslint-parser": "^0.27.0",
+    "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.4",
     "vite": "^4.3.3",
-    "sass": "^1.53.0",
-    "svelte-preprocess": "^5.0.3"
-  },
-  "dependencies": {
     "vitest": "^0.30.1"
   }
 }
