--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,32 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
-      "$components/*": ["src/components/*"],
-      "$assets/*": ["src/assets/*"],
-      "$pages/*": ["src/pages/*"],
-      "$helpers/*": ["src/helpers/*"],
-      "$styles/*": ["src/styles/*"]
+      "$components/*": [
+        "src/components/*"
+      ],
+      "$assets/*": [
+        "src/assets/*"
+      ],
+      "$pages/*": [
+        "src/pages/*"
+      ],
+      "$helpers/*": [
+        "src/helpers/*"
+      ],
+      "$styles/*": [
+        "src/styles/*"
+      ]
     }
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
