--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,12 @@
     "module": "ESNext",
     "moduleResolution": "bundler"
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "vitest.config.ts",
+    ".eslint.cjs",
+    "svelte.config.ts",
+    "aliases.config.ts",
+    "scssAliases.ts",
+  ]
 }
