--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-storysource": "^7.0.7",
+    "@storybook/addon-svelte-csf": "^3.0.2",
     "@storybook/blocks": "^7.0.7",
     "@storybook/jest": "^0.1.0",
     "@storybook/svelte": "^7.0.7",
