--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-svelte": "^2.27.1",
     "jsdom": "^21.1.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.53.0",
