--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,19 +1,20 @@
 {
   "recommendations": [
     "svelte.svelte-vscode",
-    // spell checkers
     "streetsidesoftware.code-spell-checker",
     "streetsidesoftware.code-spell-checker-portuguese-brazilian",
-    // git extensions
     "mhutchie.git-graph",
     "eamodio.gitlens",
-    // code formatters/linters
     "dbaeumer.vscode-eslint",
-    "EditorConfig.EditorConfig",
-    // other tools
-    "wmaurer.change-case", // use to easily change the case [camel-case, pascal-case, ...]
-    "gitlab.gitlab-workflow", // use to do stuff on gitlab from vscode
-    "yzhang.markdown-all-in-one", // use to open markdown preview and other things
-    "christian-kohler.path-intellisense" // help you to find some path like '../my-stuff.js'
+    "editorconfig.editorconfig",
+    "wmaurer.change-case",
+    "gitlab.gitlab-workflow",
+    "yzhang.markdown-all-in-one",
+    "christian-kohler.path-intellisense",
+    "esbenp.prettier-vscode",
+    "formulahendry.auto-close-tag",
+    "formulahendry.auto-rename-tag",
+    "wayou.vscode-todo-highlight",
+    "zan.px-2rem"
   ]
 }
