--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "format": "npx prettier --check .",
+    "lint-fix": "npx eslint --fix .",
+    "check-all": "npm install && npm run lint && npm run format-check && npm run check && npm run test",
+    "format-check": "npx prettier --check .",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "lint": "npx eslint .",
     "test": "npm run test:vitest && npm run test:storybook",
     "test:vitest": "vitest run src",
     "test:vitest-watch": "vitest src",
