--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,7 @@
 
   // Linter
   "eslint.enable": true,
-  "eslint.validate": [
-    "javascript",
-    "typescript",
-    "svelte"
-  ],
+  "eslint.validate": ["javascript", "typescript", "svelte"],
   "eslint.lintTask.enable": true,
 
   // Svelte
@@ -16,55 +12,41 @@
 
   // Spelling
   "cSpell.language": "pt,en",
-  "cSpell.words": [
-    "autodocs",
-    "storysource",
-    "ultrawide"
-  ],
+  "cSpell.words": ["autodocs", "storysource", "ultrawide"],
 
   // Utilities
-  "auto-rename-tag.activationOnLanguage": [
-    "markdown",
-    "html",
-    "svelte",
-    "mdx",
-  ],
-  "auto-close-tag.activationOnLanguage": [
-    "markdown",
-    "html",
-    "svelte",
-    "mdx",
-  ],
+  "auto-rename-tag.activationOnLanguage": ["markdown", "html", "svelte", "mdx"],
+  "auto-close-tag.activationOnLanguage": ["markdown", "html", "svelte", "mdx"],
   "editor.rulers": [
     {
-        "color": "#009e00",
-        "column": 80
+      "color": "#009e00",
+      "column": 80
     },
     {
-        "color": "#ce0000",
-        "column": 100
+      "color": "#ce0000",
+      "column": 100
     }
   ],
   "[svelte][mdx][markdown][html]": {
-    "editor.linkedEditing": true,
+    "editor.linkedEditing": true
   },
   "todohighlight.keywords": [
     {
-        "text": "NOTE:",
-        "color": "#5f5f5f",
-        "backgroundColor": "#ffd900",
-        "overviewRulerColor": "grey",
-    },
+      "text": "NOTE:",
+      "color": "#5f5f5f",
+      "backgroundColor": "#ffd900",
+      "overviewRulerColor": "grey"
+    }
   ],
 
-  "[javascript][typescript][svelte][html][css][scss][markdown][mdx]": {
+  "[javascript][typescript][svelte][html][css][scss][markdown][mdx][json][jsonc]": {
     // Formatter
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
 
     // Linter
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true,
-    },
-  },
+      "source.fixAll.eslint": true
+    }
+  }
 }
