--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,32 +16,15 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
-      "$components/*": [
-        "src/components/*"
-      ],
-      "$assets/*": [
-        "src/assets/*"
-      ],
-      "$pages/*": [
-        "src/pages/*"
-      ],
-      "$helpers/*": [
-        "src/helpers/*"
-      ],
-      "$styles/*": [
-        "src/styles/*"
-      ],
-      "$types/*": [
-        "src/types/*"
-      ]
+      "$components/*": ["src/components/*"],
+      "$assets/*": ["src/assets/*"],
+      "$pages/*": ["src/pages/*"],
+      "$helpers/*": ["src/helpers/*"],
+      "$styles/*": ["src/styles/*"],
+      "$types/*": ["src/types/*"]
     }
   },
-  "include": [
-    "src/**/*.d.ts",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte"
-  ],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [
     {
       "path": "./tsconfig.node.json"
