--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "format": "npx prettier --check .",
+    "format": "npx prettier --write .",
     "lint-fix": "npx eslint --fix .",
     "check-all": "npm install && npm run lint && npm run format-check && npm run check && npm run test",
     "format-check": "npx prettier --check .",
