readme (feat): add more info about the template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 
   // Spelling
   "cSpell.language": "pt,en",
-  "cSpell.words": ["autodocs", "storysource", "ultrawide"],
+  "cSpell.words": ["autodocs", "storysource", "ultrawide", "viewports"],
 
   // Utilities
   "auto-rename-tag.activationOnLanguage": ["markdown", "html", "svelte", "mdx"],
