--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "typescript": "^5.0.4",
     "vite": "^4.3.3",
     "vitest": "^0.30.1"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^3.3.0"
   }
 }
