--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:storybook-watch": "test-storybook --watch"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^7.0.7",
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
