--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:storybook-watch": "test-storybook --watch"
   },
   "devDependencies": {
+    "@capacitor/cli": "^4.8.0",
     "@storybook/addon-docs": "^7.0.7",
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
@@ -64,6 +65,7 @@
     "vitest": "^0.30.1"
   },
   "dependencies": {
+    "@capacitor/core": "^4.8.0",
     "svelte-spa-router": "^3.3.0"
   }
 }
