--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,6 +11,7 @@
     ".eslint.cjs",
     "svelte.config.js",
     "aliases.config.js",
-    "scripts/scssAliases.js"
+    "scripts/scssAliases.js",
+    "capacitor.config.ts"
   ]
 }
