--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vitest": "^0.30.1"
   },
   "dependencies": {
+    "@capacitor/android": "^4.8.0",
     "@capacitor/core": "^4.8.0",
     "svelte-spa-router": "^3.3.0"
   }
