--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tsconfig/svelte": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -48,6 +49,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-svelte": "^2.27.1",
+    "http-server": "^14.1.1",
     "jsdom": "^21.1.1",
     "prettier": "2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
@@ -62,7 +64,8 @@
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.3",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "wait-on": "^7.0.1"
   },
   "dependencies": {
     "@capacitor/android": "^4.8.0",
