--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "dependencies": {
     "@capacitor/android": "^4.8.0",
     "@capacitor/core": "^4.8.0",
+    "@capacitor/ios": "^4.8.0",
     "svelte-spa-router": "^3.3.0"
   }
 }
