--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: 01oseluiz/node-android
+    image: 01oseluiz/node-android:capacitor-4
     env_file:
       - .env
     container_name: mobile-app
