--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist-ssr
 storybook-static
 *.local
 
+# Android generated files
+*.orig
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
