--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "wait-on": "^7.0.1"
   },
   "dependencies": {
+    "@capacitor-community/sqlite": "^4.8.0",
     "@capacitor/android": "4.8.0",
     "@capacitor/core": "^4.8.0",
     "@capacitor/ios": "^4.8.0",
