--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@capacitor/android": "4.8.0",
     "@capacitor/core": "^4.8.0",
     "@capacitor/ios": "^4.8.0",
+    "firebase": "^10.5.2",
     "svelte-spa-router": "^3.3.0"
   }
 }
